--- a/code/create_fv.ipynb
+++ b/code/create_fv.ipynb
@@ -29,21 +29,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import argparse\n",
-    "\n",
-    "parser = argparse.ArgumentParser(description='Arguments for Feature View creation.')\n",
-    "\n",
-    "parser.add_argument('--version', required=True)\n",
-    "\n",
-    "args = parser.parse_args()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import hopsworks\n",
     "\n",
     "project = hopsworks.login()\n",
@@ -185,7 +170,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -199,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
